Closed Bug 288265 Opened 21 years ago Closed 21 years ago

save page completely is copying id to next specification value

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: kohl, Assigned: tor)

Details

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050329 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050329 saving a complete page using Mozilla SVG is producing values like: <svg:marker id="MdartA" viewBox="MdartA0 0 20 20" refX="0" refY="10" orient="auto" markerWidth="10" markerHeight="10"> from source: <svg:marker id="MdartA" viewBox="MdartA0 0 20 20" refX="0" refY="10" orient="auto" markerWidth="10" markerHeight="10"> copying the id to the beginning of the next specification value Reproducible: Always Steps to Reproduce: 1.load the appended xml-file 2.save page complete 3.view page will show the result Actual Results: finding this result was due to the surprising marker size after saving the file and correcting the doctype (maybe related error, Bug# 288133 I've not tested non-SVG browser reaction (sorry, no time at the moment, has to report another maybe related bug and then to go for my normal work)
just showing the described error situation
Assignee: general → general
Component: General → SVG
Product: Mozilla Application Suite → Core
QA Contact: general → ian
Version: unspecified → Trunk
I presume that you mean the source was: <svg:marker id="MdartA" viewBox="0 0 20 20" refX="0" refY="10" orient="auto" markerWidth="10" markerHeight="10"> I can't reproduce this using the file you attached. Note I had to remove the 'id' attribute values that had been carried to the next attribute since you attached the file with the errors in it. To help in reproducing this can you describe what you did in detail. Did you save the file from a website? Your HDD? Does it matter if you correct the doctype before you try to save it?
sorry, I appended the file after saving ...
Assignee: general → tor
Status: UNCONFIRMED → ASSIGNED
Attachment #183093 - Flags: review?(jonathan.watt)
Attachment #183093 - Flags: superreview+
Attachment #183093 - Flags: review?(jonathan.watt) → review+
Attachment #183093 - Flags: approval1.8b2?
Has this been tested in the non-svg case to see that it doesn't break anything? what's the risk here and is it worth taking for alpha if we're going to try to ship rsn?
This is a SVG-only change.
Comment on attachment 183093 [details] [diff] [review] nsSVGRect::GetValue was appending instead of replacing a=dveditz
Attachment #183093 - Flags: approval1.8b2? → approval1.8b2+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: