Bug 288265 - saving svg page messing up viewBox attributes. r=jwatt, src=bzbarsky, a=dveditz